# apertium-es-ia

./: .gitattributes  .gitignore  Makefile.am  README  apertium-es-ia.es-ia.dix  apertium-es-ia.es-ia.t1x  apertium-es-ia.ia.dix  configure.ac
test/: es-ia-chunker-expected.txt  es-ia-input.txt  es-ia-morph-expected.txt  es-ia-postchunk-expected.txt  es-ia-postgen-expected.txt  es-ia-tagger-expected.txt  tests.json
